devops/jenkins/jenkinsService.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    devops-service: jenkins
    app: jenkins
  name: jenkins
  namespace: devops
spec:
  selector:
    app: jenkins
  ports:
    - port: 8080
      targetPort: 8080
      name: http-ui
    - port: 50000
      targetPort: 50000
      name: http-agent

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    devops-deployment: jenkins
    app: jenkins
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        devops-app: jenkins
        app: jenkins
        version: v1
        env: test
    spec:
      securityContext:
        fsGroup: 65534
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        resources:
          limits:
            cpu: 200m
            memory: 2000Mi
          requests:
            cpu: 200m
            memory: 1000Mi
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-pvc
