devops/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"     
spec:
  rules:
  - host: xianyu.com
    http:
      paths:
      - path: /jenkins
        backend:
          serviceName: jenkins
          servicePort: 8080
